package com.openclassrooms.realestatemanager.ui.property.edit.dialog.photo.update

import android.content.res.Configuration
import android.graphics.BitmapFactory
import android.graphics.drawable.BitmapDrawable
import android.graphics.drawable.VectorDrawable
import android.view.View
import androidx.activity.result.ActivityResultRegistry
import androidx.activity.result.contract.ActivityResultContract
import androidx.arch.core.executor.testing.InstantTaskExecutorRule
import androidx.core.app.ActivityOptionsCompat
import androidx.core.net.toUri
import androidx.test.core.app.ActivityScenario
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.UiController
import androidx.test.espresso.ViewAction
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.action.ViewActions.replaceText
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition
import androidx.test.espresso.contrib.RecyclerViewActions.scrollToPosition
import androidx.test.espresso.matcher.RootMatchers.isDialog
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.espresso.matcher.ViewMatchers.Visibility.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.MediumTest
import androidx.test.platform.app.InstrumentationRegistry
import com.google.common.truth.Truth.assertThat
import com.openclassrooms.realestatemanager.R
import com.openclassrooms.realestatemanager.TestBaseApplication
import com.openclassrooms.realestatemanager.data.repository.DefaultPropertyRepository
import com.openclassrooms.realestatemanager.di.TestAppComponent
import com.openclassrooms.realestatemanager.models.property.PhotoType
import com.openclassrooms.realestatemanager.models.property.PhotoType.*
import com.openclassrooms.realestatemanager.models.property.Property
import com.openclassrooms.realestatemanager.models.property.storageLocalDatabase
import com.openclassrooms.realestatemanager.ui.BaseFragmentTests
import com.openclassrooms.realestatemanager.ui.MainActivity
import com.openclassrooms.realestatemanager.ui.property.browse.BrowseFragment
import com.openclassrooms.realestatemanager.ui.property.edit.update.PhotoUpdateAdapter
import com.openclassrooms.realestatemanager.ui.property.edit.update.PropertyUpdateFragment
import com.openclassrooms.realestatemanager.ui.property.propertydetail.PhotoDetailAdapter
import com.openclassrooms.realestatemanager.ui.property.shared.BaseFragment
import com.openclassrooms.realestatemanager.util.BitmapUtil.sameAs
import com.openclassrooms.realestatemanager.util.OrientationChangeAction
import com.openclassrooms.realestatemanager.util.ToastMatcher
import org.hamcrest.Matcher
import org.hamcrest.Matchers.allOf
import org.hamcrest.Matchers.not
import org.junit.*
import org.junit.runner.RunWith
import org.junit.runners.MethodSorters
import java.io.File

@RunWith(AndroidJUnit4::class)
@MediumTest
@FixMethodOrder(MethodSorters.NAME_ASCENDING)
class UpdatePhotoDialogFragmentIntegrationTest  : BaseFragmentTests() {

    @get:Rule val instantTaskExecutorRule = InstantTaskExecutorRule()

    private lateinit var propertyUpdateFragment: PropertyUpdateFragment
    
    @Before
    public override fun setUp() {
        super.setUp()
        configure_fake_repository()
        injectTest(testApplication)

        (propertiesRepository as DefaultPropertyRepository).cachedProperties.clear()
        fakeProperties = propertiesRepository.findAllProperties().blockingFirst()
        fakeProperties.forEach { property ->
            property.photos = property.photos.toSet().toMutableList()
        }
        itemPosition = (fakeProperties.indices).random()

        BrowseFragment.WHEN_NORMAL_MODE_IS_DETAIL_FRAGMENT_SELECTED = false
        BaseFragment.properties.value = fakeProperties as MutableList<Property>
    }

    @After
    public override fun tearDown() {
        fakeProperties[itemPosition].photos.forEach { photo ->
            val photoFile = File(photo.storageLocalDatabase(testApplication.applicationContext.cacheDir,true))
            if(photoFile.exists()) { photoFile.delete() }
        }
        if(BaseFragment.properties.value != null) { BaseFragment.properties.value!!.clear() }
        (propertiesRepository as DefaultPropertyRepository).cachedProperties.clear()
        super.tearDown()
    }

    @Test
    fun given_update_photo_dialog_when_click_on_item_in_photo_recycler_view_then_alert_dialog_shown() {
        // Given Update fragment
        BaseFragment.properties.value = fakeProperties as MutableList<Property>
        val scenario = ActivityScenario.launch(MainActivity::class.java).onActivity {
            mainActivity = it
            browseFragment = BrowseFragment()
            it.setFragment(browseFragment)
        }
        isMasterDetail = testApplication.resources.getBoolean(R.bool.isMasterDetail)

        navigate_to_update_fragment()

        scenario.onActivity {
            propertyUpdateFragment = browseFragment.detail.childFragmentManager.primaryNavigationFragment as PropertyUpdateFragment
        }

        val photoUpdatePosition = fakeProperties[itemPosition].photos.indices.random()

        with(onView(allOf(withId(R.id.photos_recycler_view), withParent(allOf(withId(R.id.container), withEffectiveVisibility(
            VISIBLE
        )))))) {
            perform(scrollToPosition<PhotoDetailAdapter.PhotoViewHolder>(photoUpdatePosition))
            perform(actionOnItemAtPosition<PhotoDetailAdapter.PhotoViewHolder>(photoUpdatePosition, click()))
        }

        onView(withId(R.id.edit_photo_dialog_fragment)).inRoot(isDialog()).check(matches(isDisplayed()))
    }

    @Test
    fun given_update_photo_dialog_when_update_dialog_shown_then_photo_detail_displayed() {
        // Given Update fragment
        BaseFragment.properties.value = fakeProperties as MutableList<Property>
        val scenario = ActivityScenario.launch(MainActivity::class.java).onActivity {
            mainActivity = it
            browseFragment = BrowseFragment()
            it.setFragment(browseFragment)
        }
        isMasterDetail = testApplication.resources.getBoolean(R.bool.isMasterDetail)

        navigate_to_update_fragment()

        scenario.onActivity {
            propertyUpdateFragment = browseFragment.detail.childFragmentManager.primaryNavigationFragment as PropertyUpdateFragment
        }

        val photoUpdatePosition = fakeProperties[itemPosition].photos.indices.random()

        with(onView(allOf(withId(R.id.photos_recycler_view), withParent(allOf(withId(R.id.container), withEffectiveVisibility(
            VISIBLE
        )))))) {
            perform(scrollToPosition<PhotoUpdateAdapter.PhotoViewHolder>(photoUpdatePosition))
            perform(actionOnItemAtPosition<PhotoDetailAdapter.PhotoViewHolder>(photoUpdatePosition, click()))
        }

        when(fakeProperties[itemPosition].photos[photoUpdatePosition].type) {
            LOUNGE -> { onView(withId(R.id.radio_button_lounge)).check(matches(isChecked())) }
            FACADE -> { onView(withId(R.id.radio_button_facade)).check(matches(isChecked())) }
            KITCHEN -> { onView(withId(R.id.radio_button_kitchen)).check(matches(isChecked())) }
            BEDROOM -> { onView(withId(R.id.radio_button_bedroom)).check(matches(isChecked())) }
            BATHROOM -> { onView(withId(R.id.radio_button_bathroom)).check(matches(isChecked())) }
            else -> {}
        }

        onView(withId(R.id.description_edit_text))
            .inRoot(isDialog())
            .check(matches(isDisplayed()))
            .check(matches(withText(fakeProperties[itemPosition].photos[photoUpdatePosition].description)))

        val viewHolder = propertyUpdateFragment.binding.photosRecyclerView
                .findViewHolderForAdapterPosition(photoUpdatePosition) as PhotoUpdateAdapter.PhotoViewHolder

        val viewHolderPhotoBitmap = (viewHolder.photo.drawable as BitmapDrawable).bitmap

        val updateDialogPhotoBitmap = (propertyUpdateFragment.updatePhotoAlertDialog.binding.
        photoImageview.drawable as BitmapDrawable).bitmap

        assertThat(sameAs(viewHolderPhotoBitmap, updateDialogPhotoBitmap)).isTrue()
    }

    @Test
    fun given_update_photo_dialog_when_update_photo_then_changes_occurs_in_photo_recycler_view() {
        // Given Update fragment

        val expectedResult = BitmapFactory.decodeResource(testApplication.resources, R.drawable.default_image )
        // Create the test ActivityResultRegistry
        val testRegistry = object : ActivityResultRegistry() {
            override fun <I, O> onLaunch(
                requestCode: Int,
                contract: ActivityResultContract<I, O>,
                input: I,
                options: ActivityOptionsCompat?
            ) {
                dispatchResult(requestCode, expectedResult)
            }
        }

        BaseFragment.properties.value = fakeProperties as MutableList<Property>
        val scenario = ActivityScenario.launch(MainActivity::class.java).onActivity {
            mainActivity = it
            browseFragment = BrowseFragment()
            it.setFragment(browseFragment)
        }
        isMasterDetail = testApplication.resources.getBoolean(R.bool.isMasterDetail)

        navigate_to_update_fragment()

        scenario.onActivity {
            propertyUpdateFragment = browseFragment.detail.childFragmentManager.primaryNavigationFragment as PropertyUpdateFragment
            propertyUpdateFragment.registry = testRegistry
        }

        val photoUpdatePosition = fakeProperties[itemPosition].photos
            .indexOf(fakeProperties[itemPosition].photos.first { photo -> !photo.mainPhoto })

        with(onView(allOf(withId(R.id.photos_recycler_view), withParent(allOf(withId(R.id.container), withEffectiveVisibility(VISIBLE)))))) {
            perform(scrollToPosition<PhotoUpdateAdapter.PhotoViewHolder>(photoUpdatePosition))
            perform(actionOnItemAtPosition<PhotoDetailAdapter.PhotoViewHolder>(photoUpdatePosition, click()))
        }

        onView(withId(R.id.take_photo)).perform(click())

        val differentType = PhotoType.values().first {
                type -> type != propertyUpdateFragment.updatePhotoAlertDialog.photo?.type && type != MAIN }

        when(differentType) {
            LOUNGE -> { onView(withId(R.id.radio_button_lounge)).perform(click()) }
            FACADE -> { onView(withId(R.id.radio_button_facade)).perform(click()) }
            KITCHEN -> { onView(withId(R.id.radio_button_kitchen)).perform(click()) }
            BEDROOM -> { onView(withId(R.id.radio_button_bedroom)).perform(click()) }
            BATHROOM -> { onView(withId(R.id.radio_button_bathroom)).perform(click()) }
            else -> {}
        }

        onView(withText(R.string.update_photo_detail)).perform(click())

        val viewHolder = propertyUpdateFragment.binding.photosRecyclerView
            .findViewHolderForAdapterPosition(photoUpdatePosition) as PhotoUpdateAdapter.PhotoViewHolder

        val viewHolderPhotoBitmap = (viewHolder.photo.drawable as BitmapDrawable).bitmap

        val updateDialogPhotoBitmap = (propertyUpdateFragment.updatePhotoAlertDialog.binding.
        photoImageview.drawable as BitmapDrawable).bitmap

        assertThat(sameAs(viewHolderPhotoBitmap, updateDialogPhotoBitmap)).isTrue()

        assertThat(viewHolder.type.text.toString())
            .isEqualTo(
                testApplication.resources.getString(differentType.type).uppercase()
            )
    }

    @Test
    fun given_update_photo_dialog_when_rotate_then_alert_dialog_shown_again() {
        // Given Update fragment
        BaseFragment.properties.value = fakeProperties as MutableList<Property>
        val scenario = ActivityScenario.launch(MainActivity::class.java).onActivity {
            mainActivity = it
            browseFragment = BrowseFragment()
            it.setFragment(browseFragment)
        }
        isMasterDetail = testApplication.resources.getBoolean(R.bool.isMasterDetail)

        navigate_to_update_fragment()

        scenario.onActivity {
            propertyUpdateFragment = browseFragment.detail.childFragmentManager.primaryNavigationFragment as PropertyUpdateFragment
        }

        val photoUpdatePosition = fakeProperties[itemPosition].photos.indices.random()

        with(onView(allOf(withId(R.id.photos_recycler_view), withParent(allOf(withId(R.id.container), withEffectiveVisibility(VISIBLE)))))) {
            perform(scrollToPosition<PhotoUpdateAdapter.PhotoViewHolder>(photoUpdatePosition))
            perform(actionOnItemAtPosition<PhotoDetailAdapter.PhotoViewHolder>(photoUpdatePosition, click()))
        }

        // Then Update fragment rotate
        val orientation = mainActivity.applicationContext.resources.configuration.orientation
        if(orientation == Configuration.ORIENTATION_PORTRAIT) {
            onView(isRoot())
                .perform(OrientationChangeAction.orientationLandscape(mainActivity))
        }
        if(orientation == Configuration.ORIENTATION_LANDSCAPE) {
            onView(isRoot())
                .perform(OrientationChangeAction.orientationPortrait(mainActivity))
        }
        onView(withId(R.id.edit_photo_dialog_fragment)).check(matches(isDisplayed()))
    }

    @Test
    fun given_update_photo_dialog_and_values_updated_when_rotate_then_same_values_displayed() {
        // Given Update fragment and Create an expected result Bitmap
        val expectedResult = BitmapFactory.decodeResource(testApplication.resources, R.drawable.default_image )
        // Create the test ActivityResultRegistry
        val testRegistry = object : ActivityResultRegistry() {
            override fun <I, O> onLaunch(
                requestCode: Int,
                contract: ActivityResultContract<I, O>,
                input: I,
                options: ActivityOptionsCompat?
            ) {
                dispatchResult(requestCode, expectedResult)
            }
        }

        BaseFragment.properties.value = fakeProperties as MutableList<Property>
        val scenario = ActivityScenario.launch(MainActivity::class.java).onActivity {
            mainActivity = it
            browseFragment = BrowseFragment()
            it.setFragment(browseFragment)
        }
        isMasterDetail = testApplication.resources.getBoolean(R.bool.isMasterDetail)

        navigate_to_update_fragment()

        scenario.onActivity {
            propertyUpdateFragment = browseFragment.detail.childFragmentManager.primaryNavigationFragment as PropertyUpdateFragment
            propertyUpdateFragment.registry = testRegistry
        }

        val photoUpdatePosition = fakeProperties[itemPosition].photos.indices.random()

        with(onView(allOf(withId(R.id.photos_recycler_view), withParent(allOf(withId(R.id.container), withEffectiveVisibility(VISIBLE)))))) {
            perform(scrollToPosition<PhotoUpdateAdapter.PhotoViewHolder>(photoUpdatePosition))
            perform(actionOnItemAtPosition<PhotoDetailAdapter.PhotoViewHolder>(photoUpdatePosition, click()))
        }

        onView(withId(R.id.radio_button_kitchen)).perform(click())
        onView(allOf(withId(R.id.description_edit_text), isDisplayed())).perform(replaceText(
            DESCRIPTION_TEXT
        ))

        onView(withId(R.id.take_photo)).perform(click())

        // Then Update fragment rotate
        val orientation = mainActivity.applicationContext.resources.configuration.orientation
        if(orientation == Configuration.ORIENTATION_PORTRAIT) {
            onView(isRoot())
                .perform(OrientationChangeAction.orientationLandscape(mainActivity))
        }
        if(orientation == Configuration.ORIENTATION_LANDSCAPE) {
            onView(isRoot())
                .perform(OrientationChangeAction.orientationPortrait(mainActivity))
        }

        onView(withId(R.id.radio_button_kitchen)).check(matches(isChecked()))

        onView(allOf(withId(R.id.description_edit_text), isDisplayed()))
            .check(matches(withText(DESCRIPTION_TEXT)))

        val bitmap = (propertyUpdateFragment.updatePhotoAlertDialog.binding.photoImageview.drawable as BitmapDrawable).bitmap

        assertThat(bitmap).isNotNull()
        assertThat(bitmap).isInstanceOf(expectedResult::class.java)
        assertThat(sameAs(bitmap, expectedResult)).isTrue()
    }

    @Test
    fun given_update_photo_dialog_when_select_image_from_gallery_then_return_result_with_success() {
        // Given Update fragment and Create an expected result Uri
        val expectedResult = File.createTempFile("test_",".jpg").apply {
            createNewFile()
        }.toUri()

        // Create the test ActivityResultRegistry
        val testRegistry = object : ActivityResultRegistry() {
            override fun <I, O> onLaunch(
                requestCode: Int,
                contract: ActivityResultContract<I, O>,
                input: I,
                options: ActivityOptionsCompat?
            ) {
                dispatchResult(requestCode, expectedResult)
            }
        }

        BaseFragment.properties.value = fakeProperties as MutableList<Property>
        val scenario = ActivityScenario.launch(MainActivity::class.java).onActivity {
            mainActivity = it
            browseFragment = BrowseFragment()
            it.setFragment(browseFragment)
        }
        isMasterDetail = testApplication.resources.getBoolean(R.bool.isMasterDetail)

        navigate_to_update_fragment()

        scenario.onActivity {
            propertyUpdateFragment = browseFragment.detail.childFragmentManager.primaryNavigationFragment as PropertyUpdateFragment
            propertyUpdateFragment.registry = testRegistry
        }

        val photoUpdatePosition = fakeProperties[itemPosition].photos.indices.random()

        with(onView(allOf(withId(R.id.photos_recycler_view), withParent(allOf(withId(R.id.container), withEffectiveVisibility(VISIBLE)))))) {
            perform(scrollToPosition<PhotoUpdateAdapter.PhotoViewHolder>(photoUpdatePosition))
            perform(actionOnItemAtPosition<PhotoDetailAdapter.PhotoViewHolder>(photoUpdatePosition, click()))
        }

        onView(withId(R.id.select_photo_from_gallery)).perform(click())
        assertThat(propertyUpdateFragment.updatePhotoAlertDialog.latestTmpUri).isSameInstanceAs(expectedResult)
    }

    @Test
    fun given_update_photo_dialog_when_take_a_photo_then_return_result_with_success() {
        // Given Update fragment and Create an expected result Bitmap
        val expectedResult = BitmapFactory.decodeResource(testApplication.resources, R.drawable.default_image )
        // Create the test ActivityResultRegistry
        val testRegistry = object : ActivityResultRegistry() {
            override fun <I, O> onLaunch(
                requestCode: Int,
                contract: ActivityResultContract<I, O>,
                input: I,
                options: ActivityOptionsCompat?
            ) {
                dispatchResult(requestCode, expectedResult)
            }
        }

        BaseFragment.properties.value = fakeProperties as MutableList<Property>
        val scenario = ActivityScenario.launch(MainActivity::class.java).onActivity {
            mainActivity = it
            browseFragment = BrowseFragment()
            it.setFragment(browseFragment)
        }
        isMasterDetail = testApplication.resources.getBoolean(R.bool.isMasterDetail)

        navigate_to_update_fragment()

        scenario.onActivity {
            propertyUpdateFragment = browseFragment.detail.childFragmentManager.primaryNavigationFragment as PropertyUpdateFragment
            propertyUpdateFragment.registry = testRegistry
        }

        val photoUpdatePosition = fakeProperties[itemPosition].photos.indices.random()

        with(onView(allOf(withId(R.id.photos_recycler_view), withParent(allOf(withId(R.id.container), withEffectiveVisibility(VISIBLE)))))) {
            perform(scrollToPosition<PhotoUpdateAdapter.PhotoViewHolder>(photoUpdatePosition))
            perform(actionOnItemAtPosition<PhotoDetailAdapter.PhotoViewHolder>(photoUpdatePosition, click()))
        }

        onView(withId(R.id.take_photo)).perform(click())

        val file = File(InstrumentationRegistry.getInstrumentation().targetContext.cacheDir, propertyUpdateFragment.updatePhotoAlertDialog.latestTmpUri!!.lastPathSegment!!).absolutePath
        try {
            val bitmap = BitmapFactory.decodeFile(file)
            assertThat(bitmap).isNotNull()
            assertThat(bitmap).isInstanceOf(expectedResult::class.java)
            assertThat(bitmap.sameAs(expectedResult)).isTrue()
        } catch (e: Exception) {
            e.printStackTrace()
        }
    }

    @Test
    fun given_update_photo_dialog_when_take_a_photo_then_tmp_file_created() {
        // Given Update fragment and Create an expected result Bitmap
        val expectedResult = BitmapFactory.decodeResource(testApplication.resources, R.drawable.default_image )

        // Create the test ActivityResultRegistry
        val testRegistry = object : ActivityResultRegistry() {
            override fun <I, O> onLaunch(
                requestCode: Int,
                contract: ActivityResultContract<I, O>,
                input: I,
                options: ActivityOptionsCompat?
            ) {
                dispatchResult(requestCode, expectedResult)
            }
        }

        BaseFragment.properties.value = fakeProperties as MutableList<Property>
        val scenario = ActivityScenario.launch(MainActivity::class.java).onActivity {
            mainActivity = it
            browseFragment = BrowseFragment()
            it.setFragment(browseFragment)
        }
        isMasterDetail = testApplication.resources.getBoolean(R.bool.isMasterDetail)

        navigate_to_update_fragment()

        scenario.onActivity {
            propertyUpdateFragment = browseFragment.detail.childFragmentManager.primaryNavigationFragment as PropertyUpdateFragment
            propertyUpdateFragment.registry = testRegistry
        }

        val photoUpdatePosition = fakeProperties[itemPosition].photos.indices.random()

        with(onView(allOf(withId(R.id.photos_recycler_view), withParent(allOf(withId(R.id.container), withEffectiveVisibility(VISIBLE)))))) {
            perform(scrollToPosition<PhotoUpdateAdapter.PhotoViewHolder>(photoUpdatePosition))
            perform(actionOnItemAtPosition<PhotoDetailAdapter.PhotoViewHolder>(photoUpdatePosition, click()))
        }

        onView(withId(R.id.take_photo)).perform(click())

        assertThat(propertyUpdateFragment.updatePhotoAlertDialog.tmpFile).isNotNull()

        val storedFile = File(InstrumentationRegistry.getInstrumentation().targetContext.cacheDir, propertyUpdateFragment.updatePhotoAlertDialog.latestTmpUri!!.lastPathSegment!!)

        assertThat(storedFile).isNotNull()
        assertThat(storedFile).isEqualTo(propertyUpdateFragment.updatePhotoAlertDialog.tmpFile)
    }

    @Test
    fun given_update_photo_dialog_when_select_image_from_gallery_then_tmp_file_created() {
        // Given Update fragment and Create an expected result Uri
        val expectedResult = File.createTempFile("test_",".jpg").apply {
            createNewFile()
        }.toUri()

        // Create the test ActivityResultRegistry
        val testRegistry = object : ActivityResultRegistry() {
            override fun <I, O> onLaunch(
                requestCode: Int,
                contract: ActivityResultContract<I, O>,
                input: I,
                options: ActivityOptionsCompat?
            ) {
                dispatchResult(requestCode, expectedResult)
            }
        }

        BaseFragment.properties.value = fakeProperties as MutableList<Property>
        val scenario = ActivityScenario.launch(MainActivity::class.java).onActivity {
            mainActivity = it
